--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div></div>
 	<div class="wrapper">
 	<div class="header">
 		<div class="container_header">
