--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<li>
 						<a href="#">О Седоне</a></li>
 					<li>
-						<a href="">Гостиницы</a></li>
+						<a href="#">Гостиницы</a></li>
 				</ul>
 			</nav>
 			<div class="logo">
