--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<section class="reason">
 		<div class="real_town">
 			<div class="reason1">
-				<h4>Настоящий <br> городок</h4>
+				<h4>Настоящий <br> город</h4>
 					<p>— №1 —</p>
 					<p>Седона — не аттракцион <br> для туристов, там течёт <br> 
 					своя жизнь</p>
